# $Id$

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include
${Netcdf_INCLUDE_DIRS}
)

set(LIB_FILES
atoi.f90
blims_mmx.f
c8dft.f90
catfus.f90
catfus_mod.f90
catfuslis.f
chk_extrapolate.f90
chk_interpolate.f90
ck_sepseg.f
cloge_r8_fcn.f90
comput_lib.public
coulog.f
cperiodic_table.F90
ecrad.f
erf.f
expi.f
f_upwind0.f90
fhermitd.f
fhermite.f
filfas.f
flin1.f
flint.f
fpolar.f
gausse.f
geotrn.f
get_j_or_jdotb.f90
get_namerefs.f90
getlog2int.f90
getmpa.f
hhb_resis.f90
integ_wts.f90
irns.f
jaceval.f
jacevala.f
lincir_contour.f90
lkupr.f
lkupr_r8.F
lokjac.f
lokjaca.f
makedens_gneg.f90
mkquin2.f
namels.F
namerefs.f90
namerefs_uts.f90
parsid.f
periodic_table.f90
plasma_hash_code.f90
plcentr.f
ps_namel_strip.f90
ps_namrd_ilist_chk.f90
ps_namrd_slist_chk.f90
qhermitd.f
r8_blims_mmx.f
r8_coulog.F
r8_filfas.f
r8_flin1.f
r8_fpolar.f
r8_gausse.f
r8_getmpa.f
r8_plcentr.f
r8_sevali.f
r8_shafnl.f
r8_trirad.f90
r8_xintzb.f
r8_zeroin.F
r8bsmoo.f
r8bsmoo_init.f90
r8bsmoo_mod.f90
r8bsmooh.f
r8bsmoox.f
r8fftsc.f
r8jaceval.f
r8jacevala.f
r8rfft_sub.f
r8ryeval.f
r8ryevala.f
r8sincos.f
r8splcrd.f
r8splcrda.f
rf_egridtr.f
rfx_antcen.f90
rmass.f
rmaxvec.f
ryeval.f
ryevala.f
sevali.f
shafnl.f
sige.f
sigma.f
sincos.f
splcrd.f
splcrda.f
split_imp.f90
submsg.F90
surfgeo.f90
tkbndr.f
tkbparm.inc
tkbrad.f
tr_dsort.f
tr_ir8sort.f
tr_qagi.f
tr_qags.f
tr_qelg.f
tr_qpsrt.f
tr_r8qagi.F
tr_r8qags.F
tr_r8qelg.F
tr_r8qpsrt.f
tr_ssort.f
trdate.f
trigdr.f
unflatten.f90
vnewton.f90
whatbin.c
xintz0.f
xintzb.f
xintzc.f
zeroin.f
zkbolt.f
zridderx.F
zriddery.F
)

add_library(comput ${LIB_FILES})
