# $Id$

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include
${Netcdf_INCLUDE_DIRS}
${CMAKE_BINARY_DIR}/ezcdf
${CMAKE_BINARY_DIR}/xplasma2
)

set(LIB_FILES
c_eq_flxint.F
c_eq_ganum.F
c_eq_gfnum.F
c_eq_restore.F
c_eq_save.F
c_eqm_frhochi.F
c_eqm_fromgeqdsk.F
c_eqm_irhofun.F
c_eqm_msgs.F
c_eqm_rhofun.F
c_eqm_rzfun2.F
c_eqm_rzfunda.F
c_eqm_select.F
c_eqm_uaxis.F
c_eqm_wr_geqdsk.F
eq_module.f90
eq_area.f90
eq_author.f90
eq_bdfind.f90
eq_bdlims.f90
eq_bffget.f
eq_bget.f
eq_dfast.f90
eq_errmsg.f
eq_esia.f90
eq_ffget.f
eq_fget.f
eq_find_intg.f90
eq_flxint.f90
eq_flxint_arr2.f90
eq_flxint_arr2d.f90
eq_flxint_arr2s.f90
eq_flxint_init.f90
eq_frhochi.f90
eq_frz.f90
eq_fun.f90
eq_fxcep.f90
eq_ganum.f90
eq_gaxis.f90
eq_gbids.f90
eq_geqdsk.f90
eq_get_lunerr.f
eq_get_psi0.f90
eq_getdetj.f90
eq_getjac.f90
eq_gflist.f90
eq_gfnum.f90
eq_glimb.f90
eq_glimb1.f90
eq_glimrz.f90
eq_grid.f90
eq_hrhochi.f90
eq_hrz.f90
eq_ident.f
eq_inquire_author.f90
eq_inv.f90
eq_limcon.f90
eq_list.f90
eq_ngrids.f90
eq_nindx.f90
eq_psipqgrz.f90
eq_psmom.f90
eq_rcyl.f90
eq_restore.f90
eq_rget_binsm.f90
eq_rget_sm.f90
eq_rgetf.f90
eq_rgetff.f90
eq_rholim.f90
eq_rhopsi.f90
eq_rzdist.f90
eq_rzget.f90
eq_rzlims.f90
eq_save.f90
eq_surfgeo.f90
eq_tau_bounce.f90
eq_time.f90
eq_volume.f90
eq_xcyl.f90
eq_xgetf.f90
eq_xid_mag.f90
eqi_getall.f90
eqi_jacheck_maxvar.f90
eqi_rzxvec.f
eqm_bbin.f90
eqm_brz.f90
eqm_bset.f90
eqm_cbdy.f90
eqm_cbdy_grid.f90
eqm_chi.f90
eqm_clear.f90
eqm_dbdy.f90
eqm_dbdy_grid.f90
eqm_f1d.f90
eqm_flabel.f90
eqm_free.f90
eqm_frhochi.f90
eqm_fromgeqdsk.F90
eqm_frz.f90
eqm_gen_boozer.f90
eqm_gen_q.f90
eqm_irhofun.f90
eqm_list.f90
eqm_mark_pmhd.f90
eqm_msgs.f
eqm_premsg.f
eqm_r4_hand.f
eqm_rho.f90
eqm_rhofun.f90
eqm_rzfun.f90
eqm_rzfun2.f90
eqm_rzfunda.f90
eqm_rzfunf.f90
eqm_rzgrid.f90
eqm_rzmag.f90
eqm_rzmag2.f90
eqm_rzmag_check.f90
eqm_rzmagb.f90
eqm_rzordr.f90
eqm_save_psi0.f90
eqm_select.f
eqm_set_units.f90
eqm_tbdy.f90
eqm_tbdy_grid.f90
eqm_time.f90
eqm_uaxis.f90
eqmom_getall.f90
eqrz_bffget.f
eqrz_bget.f
eqrz_ffget.f
eqrz_fget.f
equigs_write.f90
equigs_xpsi.f90
eqxyz_bffget.f
eqxyz_bget.f
eqxyz_ffget.f
eqxyz_fget.f
eqxyz_fxcep.f90
fluxav_get.f90
itrans_ptr.f90
mcgrid_argcheck.f90
mcgrid_define.f90
mcgrid_getobj.f90
mcgrid_putobj.f90
r4_eq_area.f
r4_eq_bdfind.f
r4_eq_bdlims.f
r4_eq_bffget.f
r4_eq_bget.f
r4_eq_dfast.f
r4_eq_ffget.f
r4_eq_fget.f
r4_eq_flxint.f
r4_eq_flxint_arr2d.f
r4_eq_flxint_arr2s.f90
r4_eq_flxint_init.f
r4_eq_frhochi.f
r4_eq_frz.f
r4_eq_fxcep.f
r4_eq_gaxis.f
r4_eq_geqdsk.f
r4_eq_getdetj.f
r4_eq_getjac.f
r4_eq_glimb.f
r4_eq_glimb1.f
r4_eq_glimrz.f
r4_eq_grid.f
r4_eq_inv.f
r4_eq_limcon.f
r4_eq_nindx.f
r4_eq_psmom.f
r4_eq_rcyl.f
r4_eq_rget_binsm.f
r4_eq_rget_sm.f
r4_eq_rgetf.f
r4_eq_rgetff.f
r4_eq_rholim.f
r4_eq_rzdist.f
r4_eq_rzlims.f
r4_eq_sgaxis.f
r4_eq_surfgeo.f
r4_eq_time.f
r4_eq_volume.f
r4_eq_xcyl.f
r4_eq_xget.f
r4_eqm_bbin.f
r4_eqm_brz.f
r4_eqm_cbdy.f
r4_eqm_cbdy_grid.f
r4_eqm_chi.f
r4_eqm_dbdy.f
r4_eqm_dbdy_grid.f
r4_eqm_fromgeqdsk.f
r4_eqm_irhofun.f
r4_eqm_rho.f
r4_eqm_rzfun.f
r4_eqm_rzfun2.f
r4_eqm_rzfunda.f
r4_eqm_rzfunf.f
r4_eqm_rzgrid.f
r4_eqm_rzmag.f
r4_eqm_tbdy.f
r4_eqm_tbdy_grid.f
r4_eqm_time.f
r4_eqm_uaxis.f
r4_eqmom_getall.f
r4_eqrz_bffget.f
r4_eqrz_bget.f
r4_eqrz_ffget.f
r4_eqrz_fget.f
r4_eqxyz_bffget.f
r4_eqxyz_bget.f
r4_eqxyz_ffget.f
r4_eqxyz_fget.f
r4_eqxyz_fxcep.f
rdtreq.f90
xmoments_setget.f90
xplasma1_dummy.f90
xplasma_calls.F
xplasma_get.F
)

add_library(old_xplasma ${LIB_FILES})
