# $Id$

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include
${Netcdf_INCLUDE_DIRS}
)

set(LIB_FILES
bad_exit.F
boolopts.f
c24dat0.c
c24date.F
c9dat0.c
c9date.F
c_abort.c
c_execsystem.c
c_exit.c
c_logmod.c
cccopy.c
cclean_dir.c
cdelete.c
cdump.F90
cftio.F
cftsubs.c
cget_env.c
cgetcwd.c
charopts.f
chkargs.f
clocaltim.c
cmkdir.c
cpclock.c
cptimer.f
cptimi.f
cptimr8.f
crename.c
csleep.c
cstring.F
csystem.c
cvt_days.f
cwc_delete.c
d1mach.c
datcpu_u.f
err_end.F
err_ini.F
errmsg_exit.f
errset_mpi.F90
execsystem.F90
execsystem_test.F90
f77_setenv.c
f90_delay.f90
f90_link1.f
fclean_dir.F
fcopy.F
fdelete.F
fgetline.F
find_io_unit.f90
fisatty.c
fnmdf.f90
fort_flush.F90
fpopen.c
frename.F
fsystem.c
fsystem_mem.c
fwc_delete.F
genopen.F
get_arg.F
get_arg_count.F
get_fortran_const.f90
get_proc_mem.c
getline.c
gmkdir.F
good_exit.f
gosleep.F
i1mach.c
ierfnof.f
inclopt.F
int_bcast.F90
iopen.F
ioperh.F
is_ascii.F90
isascii.c
isbatch.F
jsystem.F
jsystem_echo.f90
linux_chdir.c
linux_hostnm.c
listopt.f
logmod.F90
logmod_test.f90
lunck.f90
max_crec.c
max_reclen.F
mkdir.f90
mmpi.F90
mpi_env_mod.F90
mpi_env_scomm.f90
mpi_mkgroup.F90
mpi_printenv.F90
mpi_proc_data.F90
mpi_procname.F90
mpi_sget_env.F90
mpi_share_env.F90
mpi_sset_env.F90
mtrcons.f90
mtrfile.F90
nanscan_r4.f90
nanscan_r8.f90
nblkfac.F
null_termin.f
parcopy.F90
parse.F90
portlib_env_test.F90
portlib_parcopy.c
portlib_readword.c
porttest.F
proclist.F90
r1mach.c
read_word.F90
sget_cwd.f
sget_dsk.f
sget_env.F
sget_host.F
sget_pid.F
sget_user.F
showdefl.F
showfile.F
sset_cwd.F
sset_env.F
str_length.f
str_pad.f
tempfile.f
term_input.F
term_out.F
text_copy.f90
tmpfile.F
ufilnam.F
ugetdvi.F
ugetlog.F
ulower.f
utrnlog.F
uupper.f
vax_getarg.F
wait_for_file.f90
wall_elapsed_time.c
wall_seconds.f
wclock_diff.f90
zgetc.c
zputc.c
zzabort.f
)

add_library(portlib ${LIB_FILES})
