# $Id$

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include
${Netcdf_INCLUDE_DIRS}
${CMAKE_BINARY_DIR}/portlib
${CMAKE_BINARY_DIR}/ezcdf
${CMAKE_BINARY_DIR}/pspline
${CMAKE_BINARY_DIR}/geqdsk_mds
)

set(LIB_FILES
eqi_bbox.f90
eqi_bdfast.f90
eqi_bdfind.f90
eqi_bdfind_circ.f90
eqi_bprobe.f90
eqi_cbdy_pts.f90
eqi_contour.F90
eqi_dxa_search.f90
eqi_evenx.f90
eqi_fastinv.f90
eqi_fbmod.f90
eqi_fromg_err.f90
eqi_fromgeqdsk.f90
eqi_fxcep.f90
eqi_geq_axis.F90
eqi_geq_axis_data.f90
eqi_geq_axis_rsrch.F90
eqi_geq_axis_zsrch.f90
eqi_geq_findrz.f90
eqi_geq_getlun.f90
eqi_geq_intrp.f90
eqi_geq_mod.f90
eqi_geq_psfind.f90
eqi_geq_psimin.f90
eqi_geq_psiminr.f90
eqi_geqdsk.f90
eqi_intg_module.f90
eqi_inv.f90
eqi_irhofun.F90
eqi_nlimitr.f90
eqi_qpsi_regen.f90
eqi_rzbox.f
eqi_rzbox_info.f90
eqi_rzbox_module.f90
eqi_rzdist.f90
eqi_rzfx.f90
eqi_rzsmedg.f90
eqi_rzsmedr.f90
eqi_rzsmedz.f90
eqi_tau_bounce.f90
eqi_tbdy.f90
eqi_vtaub_mod.f90
eqi_xinv2d.F90
eqi_xpsi.f90
eqi_xpsi_fun.f90
eqi_xtrz.f90
eqm_bpsi.f90
eqm_brzx.f90
eqm_geq_maxgserr.f90
eqm_geq_time.f90
eqm_wr_geqdsk.f90
feqi_1int.f
xdistrib.f90
xdistrib_mod.f90
xpblind_copy.f90
xplasma_avg1dmod.f90
xplasma_checkname_sub.f90
xplasma_ctran.f90
xplasma_definitions.f90
xplasma_flxint.f90
xplasma_fromgeq.f90
xplasma_integ_wksub.f90
xplasma_integ_work.f90
xplasma_mcgrid.f90
xplasma_nclass.f90
xplasma_obj.f90
xplasma_obj_instance.f90
xplasma_obj_instance_mod.f90
xplasma_profs.F90
xplasma_rzgeo.f90
xplasma_sol.f90
)

add_library(xplasma2 ${LIB_FILES})
